# coppercoin

./: .gitignore  CONTRIBUTING.md  COPYING  Dockerfile  INSTALL.md  README.md  SECURITY.md
build_msvc/test_bitcoin-qt/: test_bitcoin-qt.vcxproj
ci/test/: 00_setup_env_native_multiprocess.sh
contrib/: README.md
contrib/devtools/: gen-manpages.sh
contrib/gitian-descriptors/: gitian-osx.yml  gitian-win.yml
contrib/macdeploy/: custom_dsstore.py
contrib/qos/: README.md  tc.sh
contrib/seeds/: nodes_main.txt  nodes_test.txt
contrib/testgen/: README.md  gen_key_io_test_vectors.py
contrib/windeploy/: win-codesign.cert
doc/: REST-interface.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  dependencies.md  descriptors.md  developer-notes.md  files.md  fuzzing.md  release-process.md  zmq.md
doc/litecoin-release-notes/: release-notes-0.10.2.2.md  release-notes-0.13.2.md  release-notes-0.13.3.md  release-notes-0.14.2.md  release-notes-0.15.0.1.md  release-notes-0.15.1.md  release-notes-0.16.0.md  release-notes-0.16.3.md  release-notes-0.18.1.md  release-notes-0.21.2.1.md
doc/man/: coppercoin-qt.1  coppercoin-tx.1  coppercoind.1
doc/mweb/: mining-changes.md
doc/release-notes/: release-notes-0.15.0.md
share/qt/: Info.plist.in
src/: Makefile.test.include  bitcoin-cli.cpp  bitcoin-wallet-res.rc  bitcoin-wallet.cpp  bitcoind-res.rc  chainparams.cpp  chainparamsbase.cpp  chainparamsseeds.h  clientversion.cpp
test/: Makefile.am  README.md  configure.ac  get_previous_releases.py
test/doc/man/: Makefile.am  litecoin-cli.1  litecoin-wallet.1
(+234 files in other folders)
